tests/jit/pass/call_void_func.cpm
func foo() {
    return;
}

func main() ret int64 {
    foo();
    return 0;
}
