tests/jit/fail/arg_type_mismatch.cpm
func f_abs(f: float32) ret float32 {
    return f;
}

func i_abs(f: int32) ret int32 {
    return f;
}

func main() ret int64 {
    let pi = 3.1415;
    let pi = f_abs(pi);
    let three = 3;
    let three = i_abs(three);
    return 0;
}
